--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   min-height: 100vh;
   display: flex;
+  padding-bottom: 77px;
   flex-direction: column;
   font-family: "Noto Sans HK", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -11,4 +12,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media screen and (max-width: 430px) {
+  body {
+    padding-bottom: 62px;
+  }
 }
